TestCases/ASTTests/SemanticErrorsTests/tests/test12.c
int main() {
    int z = z;
        return 0;

}
